compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__type_alias__duplicate_parameter.snap
---
source: compiler-core/src/type_/tests/type_alias.rs
expression: "\ntype A(a, a) =\n  List(a)\n"
---
error: Duplicate type parameter
  ┌─ /src/one/two.gleam:2:11
  │
2 │ type A(a, a) =
  │           ^

This definition has multiple type parameters named `a`.
Rename or remove one of them.
